fixed header spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
-    margin: 3em auto;
+    margin: 0em auto;
     width: 55%;
+    height: 100%
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -67,6 +68,14 @@ p.year {
     margin-top:0px;
 }
 
+p.header {
+    font-size: 2.8em;
+    line-height: 1em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    margin-top:-3em;
+    margin-bottom:-3em;
+    font-weight: bold;
+}
 
 footer {
     border-top: 1px solid #d5d5d5;
@@ -96,7 +105,15 @@ ul.posts li {
 
 .column2 {
   float: left;
-  width: 17.4em;
+  width: 24.4em;
+  /* height: 20em; */
+  padding: 0.1em;
+  box-sizing: border-box;
+}
+
+.column3 {
+  float: left;
+  width: 26.4em;
   /* height: 20em; */
   padding: 0.1em;
   box-sizing: border-box;
